Продолжение и исправление документации

--- a/cvslvk.lyx
+++ b/cvslvk.lyx
@@ -1,4 +1,4 @@
-#This file was created by <nikita> Tue Dec 21 20:40:48 1999
+#This file was created by <nikita> Wed Dec 22 18:55:23 1999
 #LyX 0.12 (C) 1995-1998 Matthias Ettrich and the LyX Team
 \lyxformat 2.15
 \textclass article
@@ -39,7 +39,7 @@
 \newline 
 
 \emph on 
-последнее изменение в этот документ внесено 21.12.1999
+последнее изменение в этот документ внесено 22.12.1999
 \newline 
 
 \newline 
@@ -1081,7 +1081,13 @@ CL_SUNCC_OPTIMIZE
  -- когда используются компиляторы Sun.
 \layout Subsubsection
 
-Стандартные флаги компилятора -- DEFINES и INCLUDES
+Стандартные флаги компилятора -- 
+\family typewriter 
+DEFINES
+\family default 
+ и 
+\family typewriter 
+INCLUDES
 \layout Standard
 
 Часто используемыми флагами Си- и Си++-компиляторов являются макросы препроцессо
@@ -3199,8 +3205,8 @@ make
  
 \layout Itemize
 
-при появлении новой рабочая инсталляция, при помощи которой можно удовлетворить
- требования, то очередная команда 
+при появлении новой рабочей инсталляции, при помощи которой можно удовлетворить
+ требования, очередная команда 
 \family typewriter 
 make
 \family default 
@@ -3265,7 +3271,7 @@ CL_SYMLINKS
 \layout Standard
 
 В этой переменной указывается разделенный пробелами список полных путей
- до файлов, символьные ссылки на которые пользователь хочет получить в рабочем
+ до файлов, символьные ссылки на которые пользователь получит в рабочем
  каталоге.
 \layout Standard
 
@@ -3690,7 +3696,7 @@ NOREMOVE
 .
 \layout Subsubsection
 
-Переменные, предназначенные для определения в файлах 
+Написание файла 
 \family typewriter 
 rules.cvslvk
 \layout Standard
@@ -3784,13 +3790,80 @@ override
 Для обеспечения простоты использования модуля в системе cvslvk определено
  несколько переменных и команд.
  В случае, если их недостаточно, обычно можно написать требуемое действие
- не посредственно на языке 
+ непосредственно на языке 
 \family typewriter 
 GNU
 \protected_separator 
 Makefile
 \family default 
 -а -- этот язык достаточно богат.
+\layout Itemize
+
+
+\series bold 
+Переменная: 
+\family typewriter 
+CL_OBJECTS_NU
+\newline 
+
+\family default 
+\series default 
+Содержит список дополнительных объектных файлов, которые следует включить
+ при сборке исполняемого файла или библиотеки.
+\begin_deeper 
+\layout Standard
+
+По умолчанию список объектных файлов определяется из переменной 
+\family typewriter 
+SOURCES
+\family default 
+ при помощи удаления путей, добавления пути до каталога сборки и замены
+ текста от последней точки до конца на 
+\family typewriter 
+.o
+\family default 
+.
+ Если этого по какой-либо причине недостаточно, то дополнительные объектные
+ файлы можно передать через переменную 
+\family typewriter 
+CL_OBJECTS_NU
+\family default 
+.
+ Если файлы будут браться не из рабочего каталога (а, например, из каталога
+ сборки), то следует указывать пути относительно рабочего каталога.
+\layout Standard
+
+В системе cvslvk определены шаблонные правила для сборки объектных файлов
+ из Си- и Си++-файлов, находящихся в текущем каталоге или в каталоге сборки.
+ Си-файлы определены как имеющие имя с суффиксом 
+\family typewriter 
+.c
+\family default 
+, Си++-файлы -- с суффиксом 
+\family typewriter 
+.cpp
+\family default 
+, а в рабочем каталоге -- еще с суффиксами 
+\family typewriter 
+.cc
+\family default 
+ или 
+\family typewriter 
+.С
+\family default 
+.
+ В связи с этим для подключения к исполняемому файлу некоторых генерируемых
+ Си- или Си++-файлов достаточно написать правила для их генерации, кладущие
+ результат в каталог сборки, и добавить соответствующие объектные файлы
+ в переменную 
+\family typewriter 
+CL_OBJECTS_NU
+\family default 
+.
+\layout Standard
+
+Например
+\end_deeper 
 \layout Subsubsection
 
 Удаление рабочих инсталляций
